removed redundant functions

--- a/Twitter_Data.ipynb
+++ b/Twitter_Data.ipynb
@@ -1201,8 +1201,8 @@
     "    \n",
     "    return peaks, timestamps[peaks], tweets\n",
     "\n",
-    "def get_key_player(keyData, roster):\n",
-    "    keyPoints = len(keyData)\n",
+    "def get_key_player(key_data, roster):\n",
+    "    key_points = len(key_data)\n",
     "    \n",
     "    counts = {}\n",
     "    for player in roster:\n",
@@ -1215,7 +1215,7 @@
     "        d = (' ' + name[1] + ' ').lower()\n",
     "        e = (name[0]+name[1]).lower()\n",
     "        \n",
-    "        temp = keyData\n",
+    "        temp = key_data\n",
     "        counts[player]+= len(re.findall(player, temp))\n",
     "        temp = re.sub(player, '', temp)\n",
     "        \n",
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aca20ada",
+   "id": "b1b59b31",
    "metadata": {},
    "source": [
     "### Predicting Key Player "
@@ -1323,7 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "ab86c717",
+   "id": "82a5412e",
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "271035d2",
+   "id": "59bf591f",
    "metadata": {},
    "outputs": [
     {
@@ -1530,10 +1530,10 @@
     "    top_five = list(mp.keys())[0:5]\n",
     "    \n",
     "    values = []\n",
-    "    for tp in top:\n",
-    "        values.append(mp[tp])\n",
+    "    for top in top_five:\n",
+    "        values.append(mvp[top])\n",
     "    \n",
-    "    plt.bar(top, values)\n",
+    "    plt.bar(top_five, values)\n",
     "    plt.xticks(rotation = 45)\n",
     "    plt.title(\"Key players for hawks at time: {}\". format(key_times_gohawks[id]))\n",
     "    plt.ylabel(\"#Tweets\")\n",
@@ -2185,7 +2185,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "7bddb764",
+   "id": "97e203bb",
    "metadata": {},
    "outputs": [
     {
@@ -2557,7 +2557,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "634956d6",
+   "id": "361c0aa4",
    "metadata": {},
    "outputs": [
     {
@@ -2578,7 +2578,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "0b77bf81",
+   "id": "5f12f4f3",
    "metadata": {},
    "outputs": [
     {
@@ -2611,7 +2611,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "a61094a7",
+   "id": "9b305f97",
    "metadata": {},
    "outputs": [
     {
@@ -2646,7 +2646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f25cedee",
+   "id": "ca923210",
    "metadata": {},
    "outputs": [],
    "source": []
